--- a/pom.xml
+++ b/pom.xml
@@ -9,16 +9,23 @@
     <version>4.0.0</version>
     <modules>
         <module>jsonview4-core</module>
+        <module>jsonview4-spring</module>
     </modules>
     <packaging>pom</packaging>
 
     <properties>
         <expression.version>1.0.0</expression.version>
         <jackson.version>2.8.7</jackson.version>
+        <spring.version>4.3.7.RELEASE</spring.version>
     </properties>
 
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>com.github.developframework</groupId>
+                <artifactId>jsonview4-core</artifactId>
+                <version>${project.version}</version>
+            </dependency>
             <dependency>
                 <groupId>com.github.developframework</groupId>
                 <artifactId>expression</artifactId>
@@ -38,6 +45,16 @@
                 <groupId>com.fasterxml.jackson.core</groupId>
                 <artifactId>jackson-annotations</artifactId>
                 <version>${jackson.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-context</artifactId>
+                <version>${spring.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-webmvc</artifactId>
+                <version>${spring.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
